--- a/index.qmd
+++ b/index.qmd
@@ -51,9 +51,9 @@ for you to solve independently at your own pace.
   [1-3 (Section 24.4.3, AdvR)](https://adv-r.hadley.nz/perf-improve.html#exercises-71)
 
 #### Exercise Session 2
-- **Main topic**: Using AI propperly, memory usage and benchmarking
+- **Main topic**: Using AI propperly, memory usage and benchmarking, dependency injection, reverse engineering
 - **In class walkthrough:** Exercises 2.1-2.6 (CSwR,
-  Chapter 2)
+  Chapter 2) + 24.4.3.2 + 24.4.3.3 (AdvR)
 - **Solutions**: [Exercise 2 Solutions](exercises/U2.qmd)
 - **Mini-slides**: [Tips for using AI](slides/llm_use.pdf)
 
