--- a/slides/lecture5.qmd
+++ b/slides/lecture5.qmd
@@ -33,6 +33,46 @@ Efficient computations of smoothing splines
 
 ## Efficient Computations
 
+```{r looad-nuuk-data, echo=FALSE, message=FALSE}
+library(Matrix)
+pen_mat <- function(inner_knots) {
+  knots <- sort(c(rep(range(inner_knots), 3), inner_knots))
+  d <- diff(inner_knots) # the vector of knot differences; b - a
+  g_ab <- splines::splineDesign(knots, inner_knots, derivs = 2)
+  knots_mid <- inner_knots[-length(inner_knots)] + d / 2
+  g_ab_mid <- splines::splineDesign(knots, knots_mid, derivs = 2)
+  g_a <- g_ab[-nrow(g_ab), ]
+  g_b <- g_ab[-1, ]
+  (crossprod(d * g_a, g_a) +
+    4 * crossprod(d * g_ab_mid, g_ab_mid) +
+    crossprod(d * g_b, g_b)) /
+    6
+}
+
+omega <- pen_mat(
+  seq(0, 1, 0.1)
+)
+
+nuuk <- read_table(
+  here::here("data", "nuuk.txt"),
+  col_names = c("Year", 1:12),
+  na = "-999",
+  skip = 1
+) |>
+  gather(key = "Month", value = "Temperature", -Year, convert = TRUE) |>
+  mutate(Temperature = Temperature / 10) |>
+  filter(Year > 1866)
+
+nuuk_year <- group_by(nuuk, Year) |>
+  summarise(
+    Temperature = mean(Temperature),
+    Median = median(Temperature),
+    High = max(Temperature),
+    Low = min(Temperature)
+  )
+n <- nrow(nuuk_year)
+```
+
 When $n$ is large, computing $\symbf{S}_{\lambda} \symbf{y}$ directly is
 expensive.
 
@@ -220,7 +260,7 @@ or the [Ziggurat algorithm](https://en.wikipedia.org/wiki/Ziggurat_algorithm).
 RNGkind()
 ```
 
-### Computing $\Phi^{-1}$
+## Computing $\Phi^{-1}$
 
 Recall that
 $$\Phi(x) = \frac{1}{\sqrt{2 \pi}} \int_{-\infty}^x e^{-z^2/2} \mathrm{d} z$$
@@ -463,7 +503,7 @@ fixed_vonmises_sampler <- function(m, kappa) {
 - We need a function that returns exactly $n$ samples and
 - Problem is we don't know $\alpha$ in advanced
 
-### Function Factory for Rejection Sampling
+## Function Factory for Rejection Sampling
 
 ```{r new_rejection_sampler}
 
@@ -475,7 +515,7 @@ fixed_vonmises_sampler <- function(m, kappa) {
 sample_vonmises <- new_rejection_sampler(fixed_vonmises_sampler)
 ```
 
-### Benchmarking
+## Benchmarking
 
 ```{r vmises-bench, fig.width = 9, fig.height = 4}
 bench::mark(
@@ -519,14 +559,14 @@ An analysis of $w(y) := - y^2/2 - \log q(y)$ shows that it is convex on
 $(-b^{-1}, \infty)$ and it attains its minimum in 0 with $w(0) = 0$, whence
 $$q(y) \leq e^{-y^2/2}.$$
 
-### Gamma Rejection Sampling
+## Gamma Rejection Sampling
 
 - $Y \sim \mathcal{N}(0,1)$ (proposal)
 - $U \sim \mathrm{unif}(0, 1)$
 - Accept if $U \leq q(Y) e^{Y^2/2}$
 - If accept, return $t(Y)$
 
-### Implementation
+## Implementation
 
 ```{r}
 tfun <- function(y, a) {
@@ -562,7 +602,7 @@ fixed_gamma_sampler <- function(m, r) {
 sample_gamma <- new_rejection_sampler(fixed_gamma_sampler)
 ```
 
-### Gamma Rejection Sampler Tests
+## Gamma Rejection Sampler Tests
 
 ```{r}
 tmp <- sample_gamma(10000, 8)
@@ -570,7 +610,7 @@ hist(tmp$x, freq = FALSE)
 curve(dgamma(x, 8), col = "blue", lwd = 2, add = TRUE)
 ```
 
-### Gamma Rejection Sampler Tests
+## Gamma Rejection Sampler Tests
 
 ```{r}
 tmp <- sample_gamma(10000, 3)
@@ -589,7 +629,7 @@ bench::mark(
   plot()
 ```
 
-### Rejection Probabilities
+## Rejection Probabilities
 
 ```{r}
 tmp <- sample_gamma(1e5, 16)
@@ -616,7 +656,7 @@ Typically, $a_i x + b_i$ is tangent to the graph of $\log(f)$ at
 $x_i \in I_i = (z_{i-1}, z_i]$ for
 $$z_0 < x_1 < z_1 < x_2 < \ldots < z_{m-1} < x_m < z_m.$$
 
-### Beta Distribution
+## Beta Distribution
 
 ```{r, echo = FALSE, fig.width = 13, fig.height = 9}
 fixed_beta_sampler <- function(m, x1, x2, alpha, beta) {
@@ -746,7 +786,7 @@ curve(
 par(mfrow = c(1, 1))
 ```
 
-### Von Mises Adaptive Envelope
+## Von Mises Adaptive Envelope
 
 ```{r vonmises-adaptive, echo = FALSE}
 dvm <- function(x, k) exp(k * cos(x)) / (2 * pi * besselI(k, 0))
@@ -913,7 +953,7 @@ curve(
 )
 ```
 
-### Benchmark
+## Benchmark
 
 ```{r benchmark-vonmises-adaptive, echo = FALSE, fig.width = 12, fig.height = 4}
 bench::mark(
@@ -928,7 +968,7 @@ bench::mark(
 
 Differences due to R implementation.
 
-### Notes about Adaptive Envelopes
+## Notes about Adaptive Envelopes
 
 - General and powerful technique
 - But tricky to implement
@@ -950,9 +990,8 @@ Write your own version of the `rnorm()` function using the Box–Muller transfor
 - Test your method
 - Benchmark it against `rnorm()`
 
-### Solution
-
 ```{r}
+#| include: false
 boxmuller_rnorm <- function(n) {
   m <- ceiling(n / 2)
 
@@ -964,9 +1003,7 @@ boxmuller_rnorm <- function(n) {
 
   c(z0, z1)[seq_len(n)]
 }
-```
 
-```{r}
 library(testthat)
 
 test_that("Box-Muller transform generates normal values", {
@@ -984,9 +1021,7 @@ test_that("Box-Muller transform generates normal values", {
 
   expect_equal(emp(z), ref, tolerance = 1e-3)
 })
-```
 
-```{r boxmuller-bench, fig.width = 9, fig.height = 4}
 bench::mark(
   boxmuller_rnorm(1e6),
   rnorm(1e6),
