refactor: set `ruled` option for algorithm2e

--- a/slides/packages.tex
+++ b/slides/packages.tex
@@ -1,5 +1,5 @@
 \usepackage{fontsetup}
 \usepackage[export]{adjustbox}
-\usepackage{algorithm2e}
+\usepackage[ruled,vlined]{algorithm2e}
 \usepackage{dirtree}
 \usepackage{pdfpc}
